fix(Root): Fix the styles on tablet media query and bigger

--- a/src/components/ContactExpert/ContactExpert.sass
+++ b/src/components/ContactExpert/ContactExpert.sass
@@ -11,12 +11,13 @@
     top: -40px
     z-index: -1
   &__container
-    margin: 0 20px 30px 20px
+    margin: 0 auto 30px auto
     @include media(tablet)
       display: flex
       flex-direction: row
       flex-wrap: wrap
       justify-content: center
+      max-width: 1100px
   &__images
     display: flex
     flex-direction: row
@@ -27,6 +28,7 @@
       margin: 20px
       &--inverted
         flex-direction: row-reverse
+        justify-content: center
     & div
       margin: 0 10px
       border-radius: 50px
