--- a/src/components/Customer/Customer.sass
+++ b/src/components/Customer/Customer.sass
@@ -22,5 +22,6 @@
     &__content
       display: flex
       flex-direction: row
+      justify-content: center
       & img
         height: 250px
