--- a/src/components/Optimization/Optimization.sass
+++ b/src/components/Optimization/Optimization.sass
@@ -3,5 +3,6 @@
   @include media(tablet)   
     display: flex
     flex-direction: row-reverse
+    justify-content: center
     & img
       height: 250px
